--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>HotelReservation</groupId>
 	<artifactId>HotelReservation</artifactId>
@@ -171,7 +173,38 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
-			<plugin>
+		<plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                                <execution>
+                                                <goals>
+                                                                <goal>migrate</goal>
+                                                </goals>
+
+                                </execution>
+                </executions>
+
+                <configuration>
+                                <driver>com.mysql.jdbc.Driver</driver>
+                             <url>jdbc:mysql://localhost/newhotel</url>
+                             <!-- <url>jdbc:mysql://localhost/db_HotelReservation</url> -->
+                                <user>root</user>
+                                <password>welcome123</password>
+                </configuration>
+                <dependencies>
+                                <dependency>
+                                                <groupId>com.h2database</groupId>
+                                                <artifactId>h2</artifactId>
+                                                <version>1.3.170</version>
+                                </dependency>
+                </dependencies>
+</plugin>
+		
+		
+		
+			<!-- <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
                 <version>4.0.3</version>
@@ -187,7 +220,11 @@
                         <version>5.1.21</version>
                     </dependency>
                 </dependencies>
-            </plugin>
+            </plugin> -->
+			
+			
+			
+			
 			
 			
 			<plugin>
@@ -196,7 +233,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
-				</configuration>
+				</configuration>	
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
@@ -207,5 +244,8 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		
+		
+		
 	</build>
 </project>
