--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>HotelReservation</groupId>
 	<artifactId>HotelReservation</artifactId>
-	<version>0.0.10-SNAPSHOT</version>
+	<version>0.0.11-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<dependencies>
 		
@@ -222,11 +221,6 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
                 </dependencies>
             </plugin> -->
 			
-			
-			
-			
-			
-			
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
@@ -244,8 +238,5 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 				</configuration>
 			</plugin>
 		</plugins>
-		
-		
-		
 	</build>
 </project>
