--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	</dependencies>
 
 	<build>
+	<finalName>MyHotels</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 		<plugin>
